# Whack-a-Packet

./: CMakeLists.txt  LICENSE  Project_description.md  README.md  build.sh
examples/: config.json  domains.txt  resolvers.txt
include/: af_xdp_init.h  cache.h  dns_query.h
src/: af_xdp_init.c  cache.c  dns_query.c  main.c
tests/: CMakeLists.txt  test_cache.c  test_dns_query.c
